--- a/src/Index.html
+++ b/src/Index.html
@@ -11,10 +11,10 @@
         <h1 class="text-2xl font-bold text-pink-500">My Portfolio</h1>
         <nav>
             <ul class=" space-x-6 text-gray-700 hidden md:flex">
-                <li><a href="./Home.html" class="hover:text-pink-500">Home</a></li>
-                <li><a href="./about.html" class="hover:text-pink-500">About</a></li>
-                <li><a href="./projects.html" class="hover:text-pink-500">Projects</a></li>
-                <li><a href="./Contact.html" class="hover:text-pink-500">Contact</a></li>
+                <li><a href="index.html" class="hover:text-pink-500">Home</a></li>
+                <li><a href="about.html" class="hover:text-pink-500">About</a></li>
+                <li><a href="projects.html" class="hover:text-pink-500">Projects</a></li>
+                <li><a href="Contact.html" class="hover:text-pink-500">Contact</a></li>
             </ul>
         </nav>
         <a href="#" class="bg-pink-500 text-white py-2 px-4 rounded-full shadow-md hover:bg-pink-600"></a>
