--- a/src/projects.html
+++ b/src/projects.html
@@ -36,25 +36,25 @@
             <!-- Project Card -->
             <div class="bg-violet-200 p-4 rounded-lg shadow-md hover:shadow-lg transition">
                 <img src="https://www.maggi.co.th/sites/default/files/styles/home_stage_944_531/public/srh_recipes/aae3b85156953c51dfed03a039f403a1.jpeg?h=b6717701&itok=b_muHdx8" alt="Project 1" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project One</h3>
+                <li><a href="../exercises/ex1menu.html" class="hover:text-pink-500">Project One</a></li>
                 <p class="text-gray-600 text-sm">Menu</p>
             </div>
 
             <div class="bg-pink-100 p-4 rounded-lg shadow-md hover:shadow-lg transition">
                 <img src="https://s.isanook.com/hi/0/ud/280/1404169/1.jpg" alt="Project 2" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project Two</h3>
+                <li><a href="../exercises/ex2from.html" class="hover:text-pink-500">Project Two</a></li>
                 <p class="text-gray-600 text-sm">From</p>
             </div>
 
             <div class="bg-blue-100 p-4 rounded-lg shadow-md hover:shadow-lg transition">
                 <img src="https://scontent.fbkk3-2.fna.fbcdn.net/v/t39.30808-6/480224302_3959530980984265_3956976188921236571_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEE_Vhz2zswGnOYJqFBLDlpePVvxSR9vVp49W_FJH29WuZm8Z49_7DYQamUbKkHSascLgUdv2mP-DnYhztfvIRU&_nc_ohc=tPeuZH5puDIQ7kNvgErvF-l&_nc_oc=AdiKi7yJCsl7c8k9a1h0kQ-toIw2YYP92o3LiWoyB_HDNPY_hAqQH0yDP9lbPdVb1zg&_nc_zt=23&_nc_ht=scontent.fbkk3-2.fna&_nc_gid=AmWCoedz9y6L-WP-hYuiXR3&oh=00_AYCil5idbMRViBr6r0h6zim2h6ooXX5E5AhacrsIqPPtLA&oe=67B7D09E" alt="Project 3" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project Three</h3>
+                <li><a href="../exercises/box_model.html" class="hover:text-pink-500">Project Three</a></li>
                 <p class="text-gray-600 text-sm">Boxmodel</p>
             </div>
 
             <div class="bg-pink-100 p-4 rounded-lg shadow-md hover:shadow-lg transition">
                 <img src="https://miro.medium.com/v2/resize:fit:600/1*OFsc0SD55jhi8cjo7aCA4w.jpeg" alt="Project 4" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project Four</h3>
+                <li><a href="../exercises/Beautiful menu.html" class="hover:text-pink-500">Project Four</a></li>
                 <p class="text-gray-600 text-sm">Menu+CSS</p>
             </div>
 
