--- a/src/projects.html
+++ b/src/projects.html
@@ -59,16 +59,11 @@
             </div>
 
             <div class="bg-green-200 p-4 rounded-lg shadow-md hover:shadow-lg transition">
-                <img src="https://via.placeholder.com/400" alt="Project 5" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project Five</h3>
+                <img src="https://scontent.fbkk3-4.fna.fbcdn.net/v/t39.30808-6/480664453_3960334044237292_1125914289646876409_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeF9KIC_Avzyr6C-SGZ_Sq01mBcfomFFYx-YFx-iYUVjH5fMJ-aZlBV_6iFJhKxnpkimu9i3vA6SGGXKtZId-svh&_nc_ohc=-WdFHc998tcQ7kNvgFPQD1s&_nc_oc=AdhkEfxBsM5FEjrzB6mBSxTj3H6lUEVNxyh_IBVuY8Nx78cTvHcrPcMjiaw5SilfI1M&_nc_zt=23&_nc_ht=scontent.fbkk3-4.fna&_nc_gid=AJz4lfdWSbW67vqP5fAugWD&oh=00_AYDL5x-RUxTfJq5hhgbbkuuetMFrQUkKL-lujpEveAp8sQ&oe=67B8ED1F" alt="Project 5" class="rounded-lg">
+                <li><a href="../exercises/fromlogin.html" class="hover:text-pink-500">Project Five</a></li>
                 <p class="text-gray-600 text-sm"></p>
             </div>
 
-            <div class="bg-pink-200 p-4 rounded-lg shadow-md hover:shadow-lg transition">
-                <img src="https://via.placeholder.com/400" alt="Project 6" class="rounded-lg">
-                <h3 class="text-lg font-semibold mt-3">Project Six</h3>
-                <p class="text-gray-600 text-sm"></p>
-            </div>
         </div>
     </section>
 
