--- a/exercises/box_model.html
+++ b/exercises/box_model.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>boxmodel</title>
 
-    <link rel="stylesheet" href="styleBoxmodel.css"/>
+    <link rel="stylesheet" href="stlyeBoxmodel.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 
