--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="ml-10 ">
-            <img src="https://scontent.fbkk8-2.fna.fbcdn.net/v/t39.30808-6/456123765_3796488673955164_2409705699291093600_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHig87dJf_QV2PRaNaeiksjG_kDsi8Vtf8b-QOyLxW1_55gl0d059wePgy_YULwt0JV0razF6ouuGDHeAWJGg9D&_nc_ohc=CruNTTF1WhYQ7kNvgFqqCix&_nc_oc=AdiKTDMbd6VEYtU7i6JhwpIv4UuBOGHoe5wqg-c-AMyeijF75zh4LGF9u6EsKD6gvJQ&_nc_zt=23&_nc_ht=scontent.fbkk8-2.fna&_nc_gid=ALpaJ4F_2F9qzoHgyJUqpfi&oh=00_AYCWxsHUzIZzOwmVXeKUOxIMrXxm0QdsHL37fVQIRpbwiw&oe=67B4F9E8" alt="" class="w-80 h-auto  rounded-full border-2 border-pink-700">
+            <img src="https://scontent-bkk1-1.xx.fbcdn.net/v/t39.30808-6/456123765_3796488673955164_2409705699291093600_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHig87dJf_QV2PRaNaeiksjG_kDsi8Vtf8b-QOyLxW1_55gl0d059wePgy_YULwt0JV0razF6ouuGDHeAWJGg9D&_nc_ohc=k1zQPsKnUQMQ7kNvgFaxxj6&_nc_oc=AdiW0aBHumsWD-uEYAOhCFlmsySOlnfCZXI9Q0Zu1RtCy_OPK4xCucRWOlKYD3Cl_88&_nc_zt=23&_nc_ht=scontent-bkk1-1.xx&_nc_gid=AB9uE0PWcom0e6iZe4Mmbs-&oh=00_AYCllNXukyGv_o7FZ6f44P5MuTu2SzhnHT-3tmNhcfYG8w&oe=67BB20E8" alt="" class="w-80 h-auto  rounded-full border-2 border-pink-700">
         </div>
     </section>
 
